--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   flutter_iconly: ^1.0.2
   persistent_bottom_nav_bar_v2: ^4.2.8
+  device_preview: ^1.1.0
 
 dev_dependencies:
   flutter_test:
