--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
   flutter_iconly: ^1.0.2
   persistent_bottom_nav_bar_v2: ^4.2.8
   device_preview: ^1.1.0
+  card_swiper: ^3.0.1
 
 dev_dependencies:
   flutter_test:
