--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
   persistent_bottom_nav_bar_v2: ^4.2.8
   device_preview: ^1.1.0
   card_swiper: ^3.0.1
+  fancy_shimmer_image: ^2.0.3
 
 dev_dependencies:
   flutter_test:
